gcc/testsuite/rust/rustc/ui/span/issue-81800.rs
fn x˂- // { dg-error "" "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-1 }

